--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="shortcut icon" href="#" type="image/x-icon">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
     <!--플러그인 필수 css cdn 연결-->
@@ -18,11 +17,11 @@
         <header>
             <nav>
                 <ul>
-                    <li class="active">Home</li>
-                    <li>Profile</li>
-                    <li>Project</li>
-                    <li>Banner&Details</li>
-                    <li>Contact</li>
+                    <li class="active"><button type="button">Home</button></li>
+                    <li><button type="button">Profile</button></li>
+                    <li><button type="button">Project</button></li>
+                    <li><button type="button">Banner&Details</button></li>
+                    <li><button type="button">Contact</button></li>
                 </ul>
             </nav>
             <a href="#" class="logo">
@@ -199,9 +198,9 @@
                                         </dl>
                                     </div>
                                     <div class="proto_btn">
-                                        <a href="#" class="prototype">프로토타입</a>
-                                        <a href="#" class="figma">피그마</a>
-                                        <a href="#" class="original_site">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
+                                        <a href="https://joonghoonis.github.io/namooactors/" class="prototype" target="_blank">프로토타입</a>
+                                        <a href="https://www.figma.com/proto/PgeHRUlNUxaT31SW6OPObn/%EB%82%98%EB%AC%B4%EC%97%91%ED%84%B0%EC%8A%A4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?page-id=4%3A2&node-id=126-153&p=f&viewport=302%2C201%2C0.21&t=R7CZK85UuX2Kk4cK-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="http://namooactors.com/" class="original_site"target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
                                 <div class="project_bg"></div>
@@ -227,9 +226,65 @@
                                         </dl>
                                     </div>
                                     <div class="proto_btn">
-                                        <a href="#" class="prototype">프로토타입</a>
-                                        <a href="#" class="figma">피그마</a>
-                                        <a href="#" class="original_site">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
+                                        <a href="#" class="prototype" target="_blank">프로토타입</a>
+                                        <a href="https://www.figma.com/proto/DzZJc8ZZPHrh8Bll9zK8Ot/%EC%82%BC%EC%84%B1-%EB%9D%BC%EC%9D%B4%EC%98%A8%EC%A6%88-Redesign?page-id=2%3A58&node-id=54-226&p=f&viewport=472%2C240%2C0.15&t=ZoYTHsk0omYtN9Si-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="https://www.samsunglions.com/index.asp" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
+                                    </div>
+                                </div>
+                                <div class="project_bg"></div>
+                            </div>
+                            <div class="swiper-slide project_03">
+                                <div class="left_info">
+                                    <div class="top">
+                                        <h4 class="sequence">Web-Redesign 03</h4>
+                                        <h1 class="title">쓰리씨이<span>3CE</span></h1>
+                                    </div>
+                                    <div class="desc">
+                                        <dl class="desc_period">
+                                            <dt>제작기간 ::</dt>
+                                            <dd>25.11.03~</dd>
+                                        </dl>
+                                        <dl class="desc_contribution">
+                                            <dt>기여도 ::</dt>
+                                            <dd>개인 100%</dd>
+                                        </dl>
+                                        <dl class="desc_tool">
+                                            <dt>사용 프로그램 ::</dt>
+                                            <dd>Html5, Css3, JavaScript(ES6+), Photoshop, Figma</dd>
+                                        </dl>
+                                    </div>
+                                    <div class="proto_btn">
+                                        <a href="https://joonghoonis.github.io/3CE/" class="prototype" target="_blank">프로토타입</a>
+                                        <a href="https://www.figma.com/proto/4Y0UCvZfJHQyKFc1Psd0ee/3CE-Redesign?page-id=1%3A5&node-id=157-1057&viewport=-3%2C-1163%2C0.8&t=lpcL5xyJ5GmuEtpG-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="https://www.3cecosmetics.com/ target="_blank"" class="original_site">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
+                                    </div>
+                                </div>
+                                <div class="project_bg"></div>
+                            </div>
+                            <div class="swiper-slide project_04">
+                                <div class="left_info">
+                                    <div class="top">
+                                        <h4 class="sequence">Web-Redesign 04</h4>
+                                        <h1 class="title">모이몰른<span>moimoln</span></h1>
+                                    </div>
+                                    <div class="desc">
+                                        <dl class="desc_period">
+                                            <dt>제작기간 ::</dt>
+                                            <dd>25.11.03~</dd>
+                                        </dl>
+                                        <dl class="desc_contribution">
+                                            <dt>기여도 ::</dt>
+                                            <dd>개인 100%</dd>
+                                        </dl>
+                                        <dl class="desc_tool">
+                                            <dt>사용 프로그램 ::</dt>
+                                            <dd>Html5, Css3, JavaScript(ES6+), Photoshop, Figma</dd>
+                                        </dl>
+                                    </div>
+                                    <div class="proto_btn">
+                                        <a href="https://tlswndgns09.cafe24.com/" class="prototype" target="_blank">프로토타입</a>
+                                        <a href="https://www.figma.com/proto/52a7YKFdW2WyaqFM6Gr6b7/%EB%AA%A8%EC%9D%B4%EB%AA%B0%EB%A1%A0-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?page-id=70%3A376&node-id=70-412&viewport=-971%2C225%2C0.55&t=p1dJgRSvIhoaq1t2-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="https://www.style24.com/display/brand/main/form?brandGroupNo=950&utm_source=moimoln&utm_medium=owned&utm_campaign=moimoln_site" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
                                 <div class="project_bg"></div>
