--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><button type="button">Contact</button></li>
                 </ul>
             </nav>
-            <a href="#" class="logo">
+            <a href="https://github.com/joonghoonis" class="logo" target="_blank">
                 <img src="./images/github_logo.png" alt="">
             </a>
         </header>
@@ -199,7 +199,7 @@
                                     </div>
                                     <div class="proto_btn">
                                         <a href="https://joonghoonis.github.io/namooactors/" class="prototype" target="_blank">프로토타입</a>
-                                        <a href="https://www.figma.com/proto/PgeHRUlNUxaT31SW6OPObn/%EB%82%98%EB%AC%B4%EC%97%91%ED%84%B0%EC%8A%A4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?page-id=4%3A2&node-id=126-153&p=f&viewport=302%2C201%2C0.21&t=R7CZK85UuX2Kk4cK-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="https://www.figma.com/proto/PgeHRUlNUxaT31SW6OPObn/%EB%82%98%EB%AC%B4%EC%97%91%ED%84%B0%EC%8A%A4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?page-id=392%3A2&node-id=392-3&p=f&viewport=476%2C40%2C0.14&t=hEdrV87F47GZWbJj-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
                                         <a href="http://namooactors.com/" class="original_site"target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
@@ -227,7 +227,7 @@
                                     </div>
                                     <div class="proto_btn">
                                         <a href="#" class="prototype" target="_blank">프로토타입</a>
-                                        <a href="https://www.figma.com/proto/DzZJc8ZZPHrh8Bll9zK8Ot/%EC%82%BC%EC%84%B1-%EB%9D%BC%EC%9D%B4%EC%98%A8%EC%A6%88-Redesign?page-id=2%3A58&node-id=54-226&p=f&viewport=472%2C240%2C0.15&t=ZoYTHsk0omYtN9Si-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="https://www.figma.com/proto/DzZJc8ZZPHrh8Bll9zK8Ot/%EC%82%BC%EC%84%B1-%EB%9D%BC%EC%9D%B4%EC%98%A8%EC%A6%88-Redesign?page-id=504%3A2&node-id=504-4&viewport=574%2C160%2C0.14&t=X5tu3xuGQG1Ui0uU-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
                                         <a href="https://www.samsunglions.com/index.asp" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
@@ -255,7 +255,7 @@
                                     </div>
                                     <div class="proto_btn">
                                         <a href="https://joonghoonis.github.io/3CE/" class="prototype" target="_blank">프로토타입</a>
-                                        <a href="https://www.figma.com/proto/4Y0UCvZfJHQyKFc1Psd0ee/3CE-Redesign?page-id=1%3A5&node-id=157-1057&viewport=-3%2C-1163%2C0.8&t=lpcL5xyJ5GmuEtpG-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="https://www.figma.com/proto/4Y0UCvZfJHQyKFc1Psd0ee/3CE-Redesign?page-id=1%3A6&node-id=579-2&viewport=557%2C281%2C0.04&t=Atq6L1dW9lZpKybR-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
                                         <a href="https://www.3cecosmetics.com/ target="_blank"" class="original_site">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
@@ -283,7 +283,7 @@
                                     </div>
                                     <div class="proto_btn">
                                         <a href="https://tlswndgns09.cafe24.com/" class="prototype" target="_blank">프로토타입</a>
-                                        <a href="https://www.figma.com/proto/52a7YKFdW2WyaqFM6Gr6b7/%EB%AA%A8%EC%9D%B4%EB%AA%B0%EB%A1%A0-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?page-id=70%3A376&node-id=70-412&viewport=-971%2C225%2C0.55&t=p1dJgRSvIhoaq1t2-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="https://www.figma.com/proto/52a7YKFdW2WyaqFM6Gr6b7/%EB%AA%A8%EC%9D%B4%EB%AA%B0%EB%A1%A0-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?page-id=788%3A2&node-id=788-3&viewport=498%2C365%2C0.12&t=31cU5rHjuor785qm-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
                                         <a href="https://www.style24.com/display/brand/main/form?brandGroupNo=950&utm_source=moimoln&utm_medium=owned&utm_campaign=moimoln_site" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
