--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                                         <a href="http://namooactors.com/" class="original_site"target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
+                                <div class="mokup_img"><img src="./images/mokup/namoo_mokup.png" alt=""></div>
                                 <div class="project_bg"></div>
                             </div>
                             <div class="swiper-slide project_02">
@@ -231,6 +232,7 @@
                                         <a href="https://www.samsunglions.com/index.asp" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
+                                <div class="mokup_img"><img src="./images/mokup/lions_mokup.png" alt=""></div>
                                 <div class="project_bg"></div>
                             </div>
                             <div class="swiper-slide project_03">
@@ -259,6 +261,7 @@
                                         <a href="https://www.3cecosmetics.com/ target="_blank"" class="original_site">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
+                                <div class="mokup_img"><img src="./images/mokup/3ce_mokup.png" alt=""></div>
                                 <div class="project_bg"></div>
                             </div>
                             <div class="swiper-slide project_04">
@@ -287,6 +290,7 @@
                                         <a href="https://www.style24.com/display/brand/main/form?brandGroupNo=950&utm_source=moimoln&utm_medium=owned&utm_campaign=moimoln_site" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
+                                <div class="mokup_img"><img src="./images/mokup/moimoln_mokup.png" alt=""></div>
                                 <div class="project_bg"></div>
                             </div>
                         </div>
