--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                 <img src="./images/github_logo.png" alt="">
             </a>
         </header>
-        <main>
-            <div id="home">
+        <main class="swiper"><div class="swiper-wrapper">
+            <div class="swiper-slide" id="home">
                 <div class="home_inner">
                     <span class="year">2025</span>
                     <h1 class="title">Web-Publisher</h1>
                     <span class="name">Shin Joong Hoon</span>
                 </div>
             </div>
-            <div id="profile">
+            <div class="swiper-slide" id="profile">
                 <div class="profile_inner">
                     <div class="left_content">
                         <h2 class="introduction">사용자에게 <span>직관적</span>이고 <span>아름다운</span> <br>
@@ -173,7 +173,7 @@
                     </div>  
                 </div>
             </div>
-            <div id="project">
+            <div class="swiper-slide" id="project">
                 <div class="project_inner">
                     <div class="swiper" id="project_swiper">
                         <div class="swiper-wrapper">
@@ -322,7 +322,7 @@
                     </div>
                 </div>
             </div>
-            <div id="banner_details">
+            <div class="swiper-slide" id="banner_details">
                 <h2 class="title">Banner&Details</h2>
                 <div class="banner_details_inner">
                     <div class="swiper" id="design_top_swiper">
@@ -345,7 +345,7 @@
                     </div>
                 </div>
             </div>
-            <div id="contact">
+            <div class="swiper-slide" id="contact">
                 <div class="contact_inner">
                     <div class="center">
                         <p class="sub">변화하는 트렌드와 함께 나아가는 <em>퍼블리셔</em>가 되겠습니다.</p>
@@ -358,7 +358,8 @@
                     </div>
                 </div>
             </div>
-        </main>
+
+        </div></main>
         <footer></footer>
     </div>
 </body>
