--- a/index.html
+++ b/index.html
@@ -181,64 +181,6 @@
                                 <div class="left_info">
                                     <div class="top">
                                         <h4 class="sequence">Web-Redesign 01</h4>
-                                        <h1 class="title">나무엑터스<span>Namoo-Actors</span></h1>
-                                    </div>
-                                    <div class="desc">
-                                        <dl class="desc_period">
-                                            <dt>제작기간 ::</dt>
-                                            <dd>25.11.03~</dd>
-                                        </dl>
-                                        <dl class="desc_contribution">
-                                            <dt>기여도 ::</dt>
-                                            <dd>개인 100%</dd>
-                                        </dl>
-                                        <dl class="desc_tool">
-                                            <dt>사용 프로그램 ::</dt>
-                                            <dd>Html5, Css3, JavaScript(ES6+), Photoshop, Figma</dd>
-                                        </dl>
-                                    </div>
-                                    <div class="proto_btn">
-                                        <a href="https://joonghoonis.github.io/namooactors/" class="prototype" target="_blank">프로토타입</a>
-                                        <a href="https://www.figma.com/proto/PgeHRUlNUxaT31SW6OPObn/%EB%82%98%EB%AC%B4%EC%97%91%ED%84%B0%EC%8A%A4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?page-id=392%3A2&node-id=392-3&p=f&viewport=476%2C40%2C0.14&t=hEdrV87F47GZWbJj-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
-                                        <a href="http://namooactors.com/" class="original_site"target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
-                                    </div>
-                                </div>
-                                <div class="mokup_img"><img src="./images/mokup/namoo_mokup.png" alt=""></div>
-                                <div class="project_bg"></div>
-                            </div>
-                            <div class="swiper-slide project_02">
-                                <div class="left_info">
-                                    <div class="top">
-                                        <h4 class="sequence">Web-Redesign 02</h4>
-                                        <h1 class="title">삼성 라이온즈<span>Samsung-Lions</span></h1>
-                                    </div>
-                                    <div class="desc">
-                                        <dl class="desc_period">
-                                            <dt>제작기간 ::</dt>
-                                            <dd>25.11.03~</dd>
-                                        </dl>
-                                        <dl class="desc_contribution">
-                                            <dt>기여도 ::</dt>
-                                            <dd>개인 100%</dd>
-                                        </dl>
-                                        <dl class="desc_tool">
-                                            <dt>사용 프로그램 ::</dt>
-                                            <dd>Html5, Css3, JavaScript(ES6+), Photoshop, Figma</dd>
-                                        </dl>
-                                    </div>
-                                    <div class="proto_btn">
-                                        <a href="#" class="prototype" target="_blank">프로토타입</a>
-                                        <a href="https://www.figma.com/proto/DzZJc8ZZPHrh8Bll9zK8Ot/%EC%82%BC%EC%84%B1-%EB%9D%BC%EC%9D%B4%EC%98%A8%EC%A6%88-Redesign?page-id=504%3A2&node-id=504-4&viewport=574%2C160%2C0.14&t=X5tu3xuGQG1Ui0uU-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
-                                        <a href="https://www.samsunglions.com/index.asp" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
-                                    </div>
-                                </div>
-                                <div class="mokup_img"><img src="./images/mokup/lions_mokup.png" alt=""></div>
-                                <div class="project_bg"></div>
-                            </div>
-                            <div class="swiper-slide project_03">
-                                <div class="left_info">
-                                    <div class="top">
-                                        <h4 class="sequence">Web-Redesign 03</h4>
                                         <h1 class="title">쓰리씨이<span>3CE</span></h1>
                                     </div>
                                     <div class="desc">
@@ -261,13 +203,45 @@
                                         <a href="https://www.3cecosmetics.com/ target="_blank"" class="original_site">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
-                                <div class="mokup_img"><img src="./images/mokup/3ce_mokup.png" alt=""></div>
+                                <div class="mockup_img"><img src="./images/mockup/3ce_mockup.png" alt=""></div>
+                                <div class="tablet_mockup"><img src="./images/mockup/tablet_mockup.png" alt=""></div>
+                                <div class="phone_mockup"><img src="./images/mockup/phone_mockup.png" alt=""></div>
                                 <div class="project_bg"></div>
                             </div>
-                            <div class="swiper-slide project_04">
+                            <div class="swiper-slide project_02">
                                 <div class="left_info">
                                     <div class="top">
-                                        <h4 class="sequence">Web-Redesign 04</h4>
+                                        <h4 class="sequence">Web-Redesign 02</h4>
+                                        <h1 class="title">나무엑터스<span>Namoo-Actors</span></h1>
+                                    </div>
+                                    <div class="desc">
+                                        <dl class="desc_period">
+                                            <dt>제작기간 ::</dt>
+                                            <dd>25.11.03~</dd>
+                                        </dl>
+                                        <dl class="desc_contribution">
+                                            <dt>기여도 ::</dt>
+                                            <dd>개인 100%</dd>
+                                        </dl>
+                                        <dl class="desc_tool">
+                                            <dt>사용 프로그램 ::</dt>
+                                            <dd>Html5, Css3, JavaScript(ES6+), Photoshop, Figma</dd>
+                                        </dl>
+                                    </div>
+                                    <div class="proto_btn">
+                                        <a href="https://joonghoonis.github.io/namooactors/" class="prototype" target="_blank">프로토타입</a>
+                                        <a href="https://www.figma.com/proto/PgeHRUlNUxaT31SW6OPObn/%EB%82%98%EB%AC%B4%EC%97%91%ED%84%B0%EC%8A%A4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?page-id=392%3A2&node-id=392-3&p=f&viewport=476%2C40%2C0.14&t=hEdrV87F47GZWbJj-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="http://namooactors.com/" class="original_site"target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
+                                    </div>
+                                </div>
+                                <div class="mockup_img"><img src="./images/mockup/namoo_mockup.png" alt=""></div>
+                                <div class="project_bg"></div>
+                            </div>
+                            
+                            <div class="swiper-slide project_03">
+                                <div class="left_info">
+                                    <div class="top">
+                                        <h4 class="sequence">Web-Redesign 03</h4>
                                         <h1 class="title">모이몰른<span>moimoln</span></h1>
                                     </div>
                                     <div class="desc">
@@ -290,7 +264,38 @@
                                         <a href="https://www.style24.com/display/brand/main/form?brandGroupNo=950&utm_source=moimoln&utm_medium=owned&utm_campaign=moimoln_site" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
                                     </div>
                                 </div>
-                                <div class="mokup_img"><img src="./images/mokup/moimoln_mokup.png" alt=""></div>
+                                <div class="mockup_img"><img src="./images/mockup/moimoln_mockup.png" alt=""></div>
+                                <div class="tablet_mockup"><img src="./images/mockup/tablet_mockup.png" alt=""></div>
+                                <div class="phone_mockup"><img src="./images/mockup/phone_mockup.png" alt=""></div>
+                                <div class="project_bg"></div>
+                            </div>
+                            <div class="swiper-slide project_04">
+                                <div class="left_info">
+                                    <div class="top">
+                                        <h4 class="sequence">Web-Redesign 04</h4>
+                                        <h1 class="title">삼성 라이온즈<span>Samsung-Lions</span></h1>
+                                    </div>
+                                    <div class="desc">
+                                        <dl class="desc_period">
+                                            <dt>제작기간 ::</dt>
+                                            <dd>25.11.03~</dd>
+                                        </dl>
+                                        <dl class="desc_contribution">
+                                            <dt>기여도 ::</dt>
+                                            <dd>개인 100%</dd>
+                                        </dl>
+                                        <dl class="desc_tool">
+                                            <dt>사용 프로그램 ::</dt>
+                                            <dd>Html5, Css3, JavaScript(ES6+), Photoshop, Figma</dd>
+                                        </dl>
+                                    </div>
+                                    <div class="proto_btn">
+                                        <a href="#" class="prototype" target="_blank">프로토타입</a>
+                                        <a href="https://www.figma.com/proto/DzZJc8ZZPHrh8Bll9zK8Ot/%EC%82%BC%EC%84%B1-%EB%9D%BC%EC%9D%B4%EC%98%A8%EC%A6%88-Redesign?page-id=504%3A2&node-id=504-4&viewport=574%2C160%2C0.14&t=X5tu3xuGQG1Ui0uU-1&scaling=min-zoom&content-scaling=fixed" class="figma" target="_blank">피그마</a>
+                                        <a href="https://www.samsunglions.com/index.asp" class="original_site" target="_blank">원본사이트<img src="./images/arrow_upward_alt.png" alt=""></a>
+                                    </div>
+                                </div>
+                                <div class="mockup_img"><img src="./images/mockup/lions_mockup.png" alt=""></div>
                                 <div class="project_bg"></div>
                             </div>
                         </div>
